--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "laravel-lang/common": "^6.7",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "mews/captcha": "*"
+        "mews/captcha": "^3.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
