--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "mews/captcha": "^3.4"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^3.5",
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
