--- a/package.json
+++ b/package.json
@@ -2,24 +2,44 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "tailwind:init": "tailwindcss init -p",
         "build": "vite build",
         "dev": "vite"
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
         "@tailwindcss/vite": "^4.0.0",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.8.2",
-        "bootstrap": "^5.2.3",
+        "bootstrap": "^5.3.6",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
-        "sass": "^1.56.1",
-        "tailwindcss": "^4.0.0",
+        "postcss": "^8.5.5",
+        "sass": "^1.89.2",
+        "tailwindcss": "^3.4.1",
         "vite": "^6.2.4"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2",
-        "@popperjs/core": "^2.11.8",
-        "bootstrap": "^5.3.6",
         "jquery": "^3.7.1"
-    }
+    },
+    "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
+    "name": "laravel-bbs-202503",
+    "version": "1.0.0",
+    "description": "---",
+    "main": "vite.config.js",
+    "directories": {
+        "test": "tests"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/LuStormstout/laravel-bbs-202503.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/LuStormstout/laravel-bbs-202503/issues"
+    },
+    "homepage": "https://github.com/LuStormstout/laravel-bbs-202503#readme"
 }
